--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "sharp": "^0.34.4",
     "sugar-high": "^0.5.6"
   },
   "devDependencies": {
@@ -43,8 +44,7 @@
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   },
-   "rules": {
+  "rules": {
     "prettier/prettier": "off"
   }
-  
 }
